# turri-agentic-ecommerce

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docs/: index.md
frontend/: chat.html  chat.js  consumer.html  onboarding.html  producer.html  styles.css
src/agents/: db.py  settings.py  utils.py
src/agents/customer_agent/: agent.py  converstation_agent.py  data_retrieval_agent.py  guard_rail.py  internal_schema.py  main.py  oboarding_agent.py  output_generation.py  response_conversion.py  schema_examples.yaml
src/agents/customer_agent/tools/: __init__.py  onboarding.py  orders.py  producers.py  products.py  profile.py  utils.py
src/agents/producer_agent/: conversation_agent.py  generate_report.py  main.py  output_generation.py  report_agent.py
src/agents/producer_agent/tools/: __init__.py  plots.py  (+3 more)
src/api/: main.py  models.py  rate_limiter.py  settings.py
src/api/endpoints/: admin.py  customer.py  producer.py
src/general/: __init__.py  reports.py
src/turri_data_hub/: db.py  embedding.py  fill_vector_db.py  settings.py
src/turri_data_hub/chatbot/: models.py
src/turri_data_hub/google_analytics/: fetch.py  models.py
src/turri_data_hub/recommendation_system/: compute_taste_embeddings.py  get_profiles_of_producer.py  get_recommendations.py  models.py  process_onboarding.py  taste_categories.py  update_analytics.py  update_profile.py  update_woocommerce.py
src/turri_data_hub/update/: fetch_all_woocommerce.py  fetch_google_anylytics_data.py
src/turri_data_hub/woocommerce/: models.py
(+7 files in other folders)
